--- a/main.tex
+++ b/main.tex
@@ -64,6 +64,7 @@ Matematinės analizės paskaitų konspektas}
 \input{paskaita_05.tex}                 % Funkcijos riba.
 \input{paskaita_06.tex}                 % Funkcijos riba.
 \input{paskaita_07.tex}                 % Funkcijos riba.
+\input{paskaita_08.tex}                 % Funkcijos riba.
 \input{pvz.tex}                         % Įvairus TeX pavyzdžiai.
 \input{formules.tex}                    % Pagalbinės formulės uždaviniams
                                         % spręsti.
