--- a/main.tex
+++ b/main.tex
@@ -63,8 +63,9 @@ Matematinės analizės paskaitų konspektas}
 \input{paskaita_04.tex}                 % Funkcijos riba.
 \input{paskaita_05.tex}                 % Funkcijos riba.
 \input{paskaita_06.tex}                 % Funkcijos riba.
-\input{paskaita_07.tex}                 % Funkcijos riba.
-\input{paskaita_08.tex}                 % Funkcijos riba.
+\input{paskaita_07.tex}                 % Funkcijos išvestinė.
+\input{paskaita_08.tex}                 % Funkcijos išvestinė.
+\input{paskaita_09.tex}                 % Funkcijos išvestinė.
 \input{pvz.tex}                         % Įvairus TeX pavyzdžiai.
 \input{formules.tex}                    % Pagalbinės formulės uždaviniams
                                         % spręsti.
