--- a/paskaita_07.tex
+++ b/paskaita_07.tex
@@ -1,4 +1,4 @@
-\section{Funkcijos išvestinė}
+\chapter{Funkcijos išvestinė}
 
 \begin{note}
   $f : A \to \RSET, A \subset \RSET, a(a \in A)$ yra vidinės aibės 
