Pridėtas skyrelis apie asimptotes.

--- a/main.tex
+++ b/main.tex
@@ -66,6 +66,7 @@ Matematinės analizės paskaitų konspektas}
 \input{paskaita_07.tex}                 % Funkcijos išvestinė.
 \input{paskaita_08.tex}                 % Funkcijos išvestinė.
 \input{paskaita_09.tex}                 % Funkcijos išvestinė.
+\input{paskaita_10.tex}                 % Funkcijos išvestinė.
 \input{pvz.tex}                         % Įvairus TeX pavyzdžiai.
 \input{formules.tex}                    % Pagalbinės formulės uždaviniams
                                         % spręsti.
