--- a/paskaita_02.tex
+++ b/paskaita_02.tex
@@ -22,7 +22,7 @@
 \begin{defn}[Taško aplinka]
   Taško $a$ aplinka vadinsime aibę $A$, kuriai:
   \[
-  \varepsilon > 0 : \exists U(\varepsilon; a) \subset A
+  \varepsilon > 0, \exists U(\varepsilon; a) : U(\varepsilon; a) \subset A
   \]
 \end{defn}
 
@@ -44,7 +44,7 @@
 
 \begin{notation}
   Taško $a (a \in \RSET \cup \{-\infty;+\infty\})$ aplinka žymima:
-  $U_{a}$ arba $V_{a}$.
+  $U_{a}$ arba $V_{a}$. % TODO Patikrinti ar tikrai V, o ne B.
 \end{notation}
 
 Šiuose apibrėžimuose laikome, jog $A \subset \RSET$:
