--- a/paskaita_03.tex
+++ b/paskaita_03.tex
@@ -62,10 +62,10 @@
       \]
     \item Jei 
       $g(x) \neq 0, \forall x (x \in A), \lim _{x \to a} g(x) \neq 0$, tai
-      \[
-      \lim _{x \to a} \frac{f(x)}{g(x)} =%
-        \frac{\lim _{x \to a} f(x)}{\lim _{x \to a} g(x)}.
-      \]
+      \begin{equation*}
+        \lim _{x \to a} \frac{f(x)}{g(x)} =
+          \frac{\lim _{x \to a} f(x)}{\lim _{x \to a} g(x)}.
+      \end{equation*}
   %TODO: Įrodyti!
   \end{enumerate}
 \end{prop}
