--- a/paskaita_09.tex
+++ b/paskaita_09.tex
@@ -38,7 +38,8 @@
 Lokalių ekstremumų paieškos schema ($f : A \to \RSET$):
 \begin{enumerate}
   \item Skaidome $A$ į dvi taškų aibes: $A'$ ir $A''$, kur
-    $A' \cup A'' = A$ ir $A' \cap \A'' = \emptyset$.
+    $A' \cup A'' = A$ ir
+    $A' \cap A'' = \emptyset$.
     $A'$ – taškai, kur $f$ yra diferencijuojama, o 
     $A''$ – taškai, kur $f$ nėra diferencijuojama.
   \item $A''$ aibės taškus analizuojame pagal apibrėžimą, o 
