--- a/paskaita_06.tex
+++ b/paskaita_06.tex
@@ -45,7 +45,7 @@
 \end{prop}
 
 \begin{exmp}
-  Aibė $B$ vadiname aprėžta, jei 
+  Aibė $B$ vadinama aprėžta, jei 
   $\exists c (c > 0) : |x| \leq c, \forall x (x \in B)$.
   \begin{itemize}
     \item $\NSET$ – neaprėžta.
