--- a/formules.tex
+++ b/formules.tex
@@ -50,6 +50,9 @@
   & \cos 2 \alpha = \cos ^{2} \alpha - \sin ^{2} \alpha
   \label{f_tri_dkcos} \\
 %
+  & \sin (\alpha + \beta) = 
+  \sin (\alpha) \cos (\beta) + \cos(\alpha) \sin(\beta) 
+  \label{f_tri_sin} \\
   & \sin 2 \alpha = 2 \sin \alpha \cos \alpha
   \label{f_tri_dksin} 
 %
