--- a/paskaita_04.tex
+++ b/paskaita_04.tex
@@ -57,7 +57,8 @@
         Imame bet kokią seką $\left\{ x_{n} \right\}, x_{n} \to a$. Pagal
         sekos ribos apibrėžimą:
         \begin{equation}
-          \forall U_{a}, \exists N : x_{n} \in U_{a}, \forall n (n > \NSET)
+          \forall U_{a}, \exists N (N \in \NSET) : 
+            x_{n} \in U_{a}, \forall n (n > N)
           \label{_kosi_02}
         \end{equation}
 
@@ -72,7 +73,7 @@
 
         Tam, kad pilnai būtų patenkintas \ref{limfs} funkcijos ribos 
         apibrėžimas, reikia, kad ir 
-        $\left\{ x'_{n} \right\} x'_{n} \to a : \left\{ f(x'_{n}) \right\}$
+        $\left\{ x'_{n} \right\}, x'_{n} \to a : \left\{ f(x'_{n}) \right\}$
         turėtų tą pačią ribą, kaip ir $\left\{ f(x_{n}) \right\}$, 
         kai $x_{n} \to a$.
 
