--- a/paskaita_05.tex
+++ b/paskaita_05.tex
@@ -145,7 +145,7 @@
 \begin{prop}
   \label{lim_mon}
   $f: A \to \RSET$, $a$ – ribinis ir didžiausias $A$ taškas ir $f$ yra
-  monotoniška. Tada $f$ turi ribą taške $a$. Ir jei $f$ yra ir apibrėžta,
+  monotoniška. Tada $f$ turi ribą taške $a$. Ir jei $f$ yra ir aprėžta,
   tai riba taške $a$ yra baigtinė.
 \end{prop}
 
@@ -168,11 +168,11 @@
     $\left( \frac{1}{2} ; 1 \right)$ didėja. Taigi pagal \ref{lim_mon}
     teiginį $\exists \lim_{x \to a} f(x)$.
 
-    Ar $f(x)$ yra aprėžta? Tai yra ar
+    Ar $f(x)$ yra aprėžta? Tai yra, ar
     \begin{equation*}
       \exists c (c \in \RSET) : x^{2} \leq c, \forall x (x \in A)?
     \end{equation*}
-    Taip $c = 1$. Taigi $\lim_{x \to 1} x^{2}$ yra baigtinė.
+    Taip, $c = 1$. Taigi $\lim_{x \to 1} x^{2}$ yra baigtinė.
   \end{proof}
 \end{exmp}
 
