--- a/paskaita_09.tex
+++ b/paskaita_09.tex
@@ -29,7 +29,7 @@
   lokalus ekstremumas tada ir tik tada, kai funkcijos $f$ išvestinė
   tame taške keičia ženklą.
 
-  FiXME: Performuluoti.
+  FIXME: Performuluoti.
   \begin{proof}
     TODO: Įrodyti. (Būtinumą galima iš Ferma teoremos.)
   \end{proof}
