--- a/paskaita_07.tex
+++ b/paskaita_07.tex
@@ -1,7 +1,7 @@
 \chapter{Funkcijos išvestinė}
 
 \begin{note}
-  $f : A \to \RSET, A \subset \RSET, a(a \in A)$ yra vidinės aibės 
+  $f : A \to \RSET, A \subset \RSET, a(a \in A)$ yra vidinis aibės 
   $A$ taškas.
 \end{note}
 
