Dar vienas mažas pataisymas.

--- a/paskaita_08.tex
+++ b/paskaita_08.tex
@@ -73,7 +73,7 @@
 \begin{prop}
   (Liopitalio taisyklė) Tarkime, jog išpildytos šios salygos:
   \begin{enumerate}
-    \item $\exists \lim_{x \to a} \frac{f'(x)}{g'(x)}$
+    \item $\exists \lim_{x \to a^{+}} \frac{f'(x)}{g'(x)}$
     \item $f(a^{+}) = g(a^{+}) = 0$ arba 
       $g(a^{+}) = f(a^{+}) = \pm \infty$.
     \item $g'(x) \neq 0, \forall x (x \in A)$.
