Pataisyta ctg išvestinė formulyne.

--- a/formules.tex
+++ b/formules.tex
@@ -76,7 +76,7 @@
   (\tg x)' &= \frac{1}{\cos^{2} x}
   \label{dx_tg} \\
 %
-  (\ctg x)' &= \frac{1}{\sin^{2} x}
+  (\ctg x)' &= - \frac{1}{\sin^{2} x}
   \label{dx_ctg} \\
 %
   (\arcsin x)' &= \frac{1}{\sqrt{1 - x^{2}}}
