Funkcijos tyrimo papildymas.

--- a/paskaita_10.tex
+++ b/paskaita_10.tex
@@ -141,8 +141,9 @@
 
 Atliekant funkcijos tyrimą atliekami tokie žingsniai:
 \begin{enumerate}
-  \item Nustatomi taškai, kur funkcija kerta $x$ ir $y$ ašis. Patikrinama
-    ar funkcija yra periodinė, lyginė, nelyginė.
+  \item Nustatomi taškai, kur funkcija kerta $x$ ir $y$ ašis. Patikrinama,
+    ar funkcija yra periodinė, lyginė, nelyginė. Randama funkcijos
+    apibrėžimo sritis.
   \item Ištiriami ypatingieji taškai: $-\infty, +\infty$, trūkio taškai.
     Nustatomos trūkio taškų rūšys.
   \item Ištiriamas funkcijos monotoniškumas: surandami didėjimo, mažėjimo
