--- a/paskaita_03.tex
+++ b/paskaita_03.tex
@@ -1,7 +1,7 @@
 \begin{prop}
   Jei $\lim_{x \to a} f(x) = b$ ir $\lim_{x \to a} f(x) = c$, tai $b = c$.
   \begin{proof}
-    Tarkime priešinai $b \neq c$. Tegu $b < c$.
+    Tarkime priešingai $b \neq c$. Tegu $b < c$.
 
     Pagal \ref{limfed} apibrėžimą:
     \begin{align*}
